--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
   <meta charset="utf-8">
-	<title>Intima - Clean &amp; Responsive Resume Template</title>
+	<title>Walter Roa Portfolio</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -61,22 +61,22 @@
 
          <ul id="nav" class="nav">
             <li class="current">
-              <a class="smoothscroll" href="#home"><i class="fa fa-home fa-fw"></i>Home</a>
+              <a class="smoothscroll" href="#home"><i class="fa fa-home fa-fw"></i>Accueil</a>
             </li>
             <li>
-              <a class="smoothscroll" href="#about"><i class="fa fa-user fa-fw"></i>About Me</a>
+              <a class="smoothscroll" href="#about"><i class="fa fa-user fa-fw"></i>À propos</a>
             </li>
             <li>
-              <a class="smoothscroll" href="#resume"><i class="fa fa-file-text fa-fw"></i>Resume</a>
+              <a class="smoothscroll" href="#resume"><i class="fa fa-file-text fa-fw"></i>CV</a>
             </li>
             <li>
               <a class="smoothscroll" href="#portfolio"><i class="fa fa-briefcase fa-fw"></i>Portfolio</a>
             </li>
             <li>
-              <a class="smoothscroll" href="#testimonials"><i class="fa fa-comments fa-fw"></i>Testimonials</a>
+              <a class="smoothscroll" href="#testimonials"><i class="fa fa-comments fa-fw"></i>Témoignages</a>
             </li>
             <li>
-              <a class="smoothscroll" href="#contact"><i class="fa fa-envelope fa-fw"></i>Contact</a>
+              <a class="smoothscroll" href="#contact"><i class="fa fa-envelope fa-fw"></i>Contacter</a>
             </li>
          </ul> <!-- end #nav -->
 
@@ -84,8 +84,9 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline wow zoomIn">I'm <span>John Doe</span></h1>
-            <h3 class="wow fadeInUp">I'm a passionate <span>UI/UX Designer</span> and <span>Front-End Developer</span> creating modern and responsive design for <span>Web</span> and <span>Mobile</span>. <br> Let's start scfadeIng and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
+            <h1 class="responsive-headline wow zoomIn"><span>Walter Roa</span></h1>
+            <h3 class="wow fadeInUp">Je suis un passionné <span>UI/UX Designer</span> et <span>Front-End Developer</span> je crée des conceptions modernes et réactives pour <span>le Web</span> et <span>Mobile</span>. <br> vous devez commencer à défiler pour 
+            connaître plus <a class="smoothscroll" href="#about">sur moi</a>.</h3>
             <hr />
          </div>
       </div>
@@ -101,13 +102,14 @@
    <div id="social">
       <div class="row social-container">
             <ul class="social">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-github"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+               <li><a href="https://www.facebook.com/roa.serrano"><i class="fa fa-facebook"></i></a></li>
+               <li><a href="https://twitter.com/kabalord"><i class="fa fa-twitter"></i></a></li>
+               <li><a href="https://www.instagram.com/wroaserrano"><i class="fa fa-instagram"></i></a></li>
+               <!--<li><a href="#"><i class="fa fa-google-plus"></i></a></li>-->
+               <li><a href="https://www.linkedin.com/in/walter-roa-serrano-a1a98386/"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://github.com/kabalord"><i class="fa fa-github"></i></a></li>
+               <!--<li><a href="#"><i class="fa fa-dribbble"></i></a></li>-->
+               <!--<li><a href="#"><i class="fa fa-skype"></i></a></li>-->
             </ul>
       </div>
 
@@ -125,8 +127,8 @@
          <div class="pp-container">
 
             <img class="profile-pic wow zoomIn"  src="images/avatar.jpg" alt="" />
-              <h2>John Doe</h2>
-              <h3>UI/UX Developer</h3>              
+              <h2>Walter Roa</h2>
+              <h3>UI/UX développeur</h3>              
             </div> <!-- Profile Picture -->
          </div>
 
@@ -134,19 +136,15 @@
          <div class="six columns main-col wow fadeIn">
           <div class="arrow-left"></div>
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-            sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
+            <p>En tant que développeur frontend, j'ai participé à la définition et la construction d'applications web à fort impact; prendre en compte les besoins des utilisateurs, la convivialité dans différents appareils et la réactivité.
+            Designer graphique talentueux avec une expérience éprouvée offrant des solutions de conception créatives et innovantes adaptées aux perspectives du client. Compétences démontrées dans le développement de projets depuis leur conception jusqu'à la livraison finale, qui englobe de nouvelles technologies pour produire une conception UX hautement interactive.
             </p>
 
           <div class="row">            
             <div class="six columns download">
                 <p>
-                  <a href="#contact" class="button"><i class="fa fa-paper-plane"></i>Hire Me</a>
-                  <a href="resume.pdf" class="button" target="_blank"><i class="fa fa-download"></i>Download Resume</a>
+                  <a href="#contact" class="button"><i class="fa fa-paper-plane"></i>Engagez moi</a>
+                  <a href="assets/webDeveloperCurriculumVitaeFranceAvecLettreMotivation.pdf" class="button" target="_blank"><i class="fa fa-download"></i>Télécharger CV</a>
                 </p>
             </div> <!-- Download Buttons --> 
       </div>
@@ -162,7 +160,7 @@
    <!-- Resume Section
    ================================================== -->
    <section id="resume">
-    <h1 class="section-title wow fadeInDown">Resume</h1>
+    <h1 class="section-title wow fadeInDown">Curriculum Vitae</h1>
       <!-- Education
       =============================================== -->
       <div class="row education">
@@ -177,31 +175,11 @@
               <li class="timeline-event">
                 <label class="timeline-event-icon"></label>
                 <div class="timeline-event-copy">
-                  <p class="timeline-event-thumbnail">January 2008 - December 2012</p>
-                  <h3>University of Engineering</h3>
-                  <h4>Bachelor of Science</h4>
-                  <p><strong>Computer Science &amp; Engineering</strong><br>
+                  <p class="timeline-event-thumbnail">Janvier 2003 - Decembre 2007</p>
+                  <h3>Université Jorge Tadeo Lozano</h3>
+                  <h4>Baccalauréat</h4>
+                  <p><strong>Conception Graphique</strong><br>
                      Completed graduation from University of Engineering with the major of Computer Science &amp; Engineering. Achieved the Dean Award for extra-ordinary result.</p>
-                </div>
-              </li>
-              <li class="timeline-event">
-                <label class="timeline-event-icon"></label>
-                <div class="timeline-event-copy">
-                  <p class="timeline-event-thumbnail">January 2006 - December 2008</p>
-                  <h3>College of Awesomeness</h3>
-                  <h4>A Level</h4>
-                  <p><strong>Grade A++</strong><br>
-                     Completed A Level from College of Awesomeness with and finished A Level with A++. Achieved the Principal Award for extra-ordinary result.</p>
-                </div>
-              </li>
-              <li class="timeline-event">
-                <label class="timeline-event-icon"></label>
-                <div class="timeline-event-copy">
-                  <p class="timeline-event-thumbnail">January 2000 - December 2006</p>
-                  <h3>School of Amusement</h3>
-                  <h4>O Level</h4>
-                  <p><strong>Grade A++</strong><br>
-                     Completed O Level from College of Amusement with and finished O Level with A++. Achieved the Principal Award for extra-ordinary result.</p>
                 </div>
               </li>
             </ul>  
@@ -714,8 +692,8 @@
 
       <div class="row section-head">
           <div class="twelve columns">
-              <h1 class="section-title wow fadeInDown">Get In Touch</h1>
-              <p class="lead">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, voluptatem quia voluptas sit aspernatur aut odit aut fugit. </p>
+              <h1 class="section-title wow fadeInDown">Entrer en contact</h1>
+              <p class="lead">Si vous voulez entrer en contact, parlez-moi d'une collaboration ou dites simplement, salut! </p>
           </div>
       </div> <!-- Section head --> 
 
@@ -756,7 +734,7 @@
                 </form> <!-- Form End -->
                          <!-- contact-success -->
                          <div id="message-success">
-                                <i class="fa fa-check"></i>Your message was sent, thank you!<br>
+                                <i class="fa fa-check"></i>Votre message a été envié, merci beaucoup!<br>
                          </div>
             </div>  <!-- Form Container End -->
           </div>
@@ -785,17 +763,18 @@
          <div class="twelve columns">
 
             <ul class="social-links">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+               <li><a href="https://www.facebook.com/roa.serrano"><i class="fa fa-facebook"></i></a></li>
+               <li><a href="https://twitter.com/kabalord"><i class="fa fa-twitter"></i></a></li>
+               <li><a href="https://www.instagram.com/wroaserrano"><i class="fa fa-instagram"></i></a></li>
+               <!--<li><a href="#"><i class="fa fa-google-plus"></i></a></li>-->
+               <li><a href="https://www.linkedin.com/in/walter-roa-serrano-a1a98386/"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://github.com/kabalord"><i class="fa fa-github"></i></a></li>
+               <!--<li><a href="#"><i class="fa fa-dribbble"></i></a></li>-->
+               <!--<li><a href="#"><i class="fa fa-skype"></i></a></li>-->
             </ul>
 
             <ul class="copyright">
-               <li>John Doe &copy; Copyright 2014, All Rights Reserved</li>
+               <li>Walter Roa &copy; Copyright 2018, Tous les droits sont réservés</li>
                
             </ul>
 
