--- a/index.html
+++ b/index.html
@@ -977,13 +977,25 @@
       </div>
 
    </footer> <!-- Footer End-->
-
+	
+	<script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: 45.754396, lng: 4.812154},
+          zoom: 8
+        });
+      }
+    </script>
+    
    <!-- Java Script
    ================================================== -->
 
    <script src="js/jquery-2.1.1.min.js"></script>
-   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&AMP;sensor=false"></script>
-   <script src="js/gmaps.js"></script>
+   <!--<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&AMP;sensor=false"></script>
+   <script src="js/gmaps.js"></script>-->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8EQDJ5_NUTW_cL9fdNJXnmqPxXGl9a8g&callback=initMap"
+    async defer></script>
    <script src="assets/owl-carousel/owl.carousel.min.js"></script>
    <script src="js/waypoints.js"></script>
    <script src="js/jquery.fittext.js"></script>
